Directions fix. Ready to check

--- a/html/index.html
+++ b/html/index.html
@@ -330,9 +330,9 @@
   </div><!-- /.container -->
 </footer><!-- /footer -->
 
-  <script type="text/javascript" src="/js/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="/js/scripts.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfsfiAu7WIz03n20U8yvkgrcUFiHA_TGc&callback=initMap"> </script>
   
 
